--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/home.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Welcome to Rent Rhythm" />
+    <meta name="description" content="Supercharge your property management!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/home.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
